# Metered-SaaS-Logic

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  ROADMAP.md  index.html  mkdocs.yml  pyproject.toml
.specify/memory/: constitution.md
SETUP/: index.html
adr/000-template/: index.html
adr/001-python-language/: index.html
adr/002-precommit-required/: index.html
contributing/: index.html
docs/: SETUP.md  contributing.md  getting-started.md  index.md
docs/adr/: 001-python-language.md
docs/proposals/: feat-009-dynamic-pricing.md
site/: 404.html  index.html  sitemap.xml
site/SETUP/: index.html
site/adr/000-template/: index.html
site/adr/001-python-language/: index.html
site/adr/002-precommit-required/: index.html
site/contributing/: index.html
site/getting-started/: index.html
site/search/: search_index.json
