[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metered-saas-logic"
version = "0.1.0"
description = "Usage metering for SaaS applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "pre-commit>=3.7"]

[tool.hatch.build.targets.wheel]
packages = ["src/metered_saas"]
